responsiveness issue fixed on mobile devices.

--- a/style.css
+++ b/style.css
@@ -116,3 +116,96 @@ h1 {
 .label-score {
     margin-bottom: 2rem;
 }
+
+@media (max-width:750px) {
+    main {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .left {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 101px;
+    }
+
+    header {
+        position: relative;
+        top: 52px;
+        height: 35vh;
+        border-bottom: 7px solid #eee;
+    }
+
+    h1 {
+        font-size: 3rem;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        top: 52%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .number {
+        background: #eee;
+        color: #333;
+        font-size: 4rem;
+        width: 12rem;
+        padding: 2rem 0rem;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+
+    .right {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        font-size: 1.3rem;
+        padding: 0 20px;
+    }
+
+    .message {
+        margin-bottom: 3rem;
+        height: 3rem;
+        text-align: center;
+    }
+
+    .guess {
+        background: none;
+        border: 3px solid #eee;
+        font-family: inherit;
+        color: inherit;
+        font-size: 4rem;
+        padding: 1.5rem;
+        width: 21rem;
+        text-align: center;
+        display: block;
+        margin-bottom: 3rem;
+    }
+
+    .btn {
+        border: none;
+        background-color: #eee;
+        color: #222;
+        font-size: 1.2rem;
+        font-family: inherit;
+        padding: 1.3rem 1.2rem;
+        cursor: pointer;
+    }
+
+    .again {
+        position: absolute;
+        top: -3.7rem;
+        left: 2rem;
+    }
+}
